--- a/src/res/languages/en.json
+++ b/src/res/languages/en.json
@@ -47,6 +47,7 @@
   "TEXT_ID_FULL_NAME":"FULL NAME",
   "TEXT_ID_ROLE":"ROLE",
   "TEXT_ID_LAST_LOGIN":"LAST LOGIN",
+  "TEXT_ID_MENU": "MENU",
   "TEXT_ID_TIME":"TIME",
   "TEXT_ID_PENDINGUSERS":"pendingUsers",
   "TEXT_ID_PENDING_USERS":"Pending Users",
@@ -60,7 +61,7 @@
   "TEXT_ID_CUSTOMER_MSISDN_OR_UUID":"CUSTOMER MSISDN OR UUID",
   "TEXT_ID_SEARCH":"Search",
   "TEXT_ID_ENTER_CUSTOMER_MSISDN_OR_UUID_TO_START":"Enter Customer MSISDN or UUID to start!",
-  "TEXT_ID_0_RESULTS_FOUND!":"0 Results Found!",
+  "TEXT_ID_0_RESULTS_FOUND":"0 Results Found!",
   "TEXT_ID_CUSTOMER_ID":"Customer ID",
   "TEXT_ID_MSISDN":"msisdn",
   "TEXT_ID_LEVEL_INFORMATION":"Level Information",
