--- a/src/res/languages/es-CL.json
+++ b/src/res/languages/es-CL.json
@@ -46,6 +46,7 @@
   "TEXT_ID_ACTIVE_USERS":"Usuarios activos",
   "TEXT_ID_FULL_NAME":"NOMBRE COMPLETO",
   "TEXT_ID_ROLE":"ROL",
+  "TEXT_ID_MENU": "MENÚ",
   "TEXT_ID_LAST_LOGIN":"ÚLTIMO ACCESO",
   "TEXT_ID_TIME":"HORA",
   "TEXT_ID_PENDINGUSERS":"pendingUsers",
