configured the customer support page

--- a/src/res/languages/es-CL.json
+++ b/src/res/languages/es-CL.json
@@ -12,6 +12,7 @@
   "TEXT_ID_USER_MANAGEMENT":"Gestión de usuarios",
   "TEXT_ID_CUSTOMER_SUPPORT":"Atención al cliente",
   "TEXT_ID_LOGOUT":"Cerrar sesión",
+  "TEXT_ID_HISTORY": "Historial",
   "TEXT_ID_JUVO_MOBILE_COPYRIGHT":"© Juvo Mobile. 2019",
   "TEXT_ID_CREATE_NEW_SEGMENT":"CREAR NUEVO SEGMENTO",
   "TEXT_ID_YOURSEGMENTS":"yourSegments",
