--- a/src/res/languages/es-CL.json
+++ b/src/res/languages/es-CL.json
@@ -56,6 +56,7 @@
   "TEXT_ID_THIS_ACTION_IS_PERMANENT_AND_NOT_REVERSIBLE":"¡Esta acción es permanente y no reversible!",
   "TEXT_ID_YOU_VE_SUCCESSFULLY_INVITED_NEW_USERS":"¡Invitaste exitosamente a nuevos usuarios!",
   "TEXT_ID_YOU_VE_SUCCESSFULLY_INVITED_NEW_USER":"¡Invitaste exitosamente a nuevos usuario!",
+  "TEXT_ID_YOU_VE_SUCCESSFULLY_SAVED_USER":"¡El usuario ha sido guardado con éxito!",
   "TEXT_ID_INVITING_NEW_USERS_UNSUCCESSFUL":"Invitación a nuevos usuarios sin éxito",
   "TEXT_ID_CUSTOMER_LOOKUP":"Búsqueda de clientes",
   "TEXT_ID_SEARCH_CUSTOMER":"Buscar cliente",
