--- a/src/res/languages/es-CL.json
+++ b/src/res/languages/es-CL.json
@@ -57,6 +57,7 @@
   "TEXT_ID_YOU_VE_SUCCESSFULLY_INVITED_NEW_USERS":"¡Invitaste exitosamente a nuevos usuarios!",
   "TEXT_ID_YOU_VE_SUCCESSFULLY_INVITED_NEW_USER":"¡Invitaste exitosamente a nuevos usuario!",
   "TEXT_ID_YOU_VE_SUCCESSFULLY_SAVED_USER":"¡El usuario ha sido guardado con éxito!",
+  "TEXT_ID_YOU_VE_SUCCESSFULLY_DELETED_USER":"¡Has eliminado con éxito a este usuario!",
   "TEXT_ID_INVITING_NEW_USERS_UNSUCCESSFUL":"Invitación a nuevos usuarios sin éxito",
   "TEXT_ID_CUSTOMER_LOOKUP":"Búsqueda de clientes",
   "TEXT_ID_SEARCH_CUSTOMER":"Buscar cliente",
@@ -100,5 +101,6 @@
   "TEXT_ID_EMAIL_IS_A_REQUIRED_FIELD":"Email es un campo obligatorio",
   "TEXT_ID_DEPARTMENT_IS_A_REQUIRED_FIELD":"Departamento es un campo obligatorio",
   "TEXT_ID_EMAIL_MUST_BE_A_VALID_EMAIL":"Email debe ser un email valido",
-  "TEXT_ID_MSISDN_IS_A_REQUIRED_FIELD":"MSISDN es un campo obligatorio"
+  "TEXT_ID_MSISDN_IS_A_REQUIRED_FIELD":"MSISDN es un campo obligatorio",
+  "TEXT_ID_THE_USERS_YOU_INTENDED_TO_ADD_ALREADY_EXIST_IN_THE_SYSTEM":"Los usuarios que pretendía agregar ya existen en el sistema"
 }
